# BayesForLaurence

./: .gitignore  EDBOplus.py  README.md  pyproject.toml  start.sh
database/tttest/: my_optimization.csv  my_optimization_additional_bak.csv  my_optimization_backup.csv  my_optimization_temp.csv  pred_my_optimization.csv  project_info.toml
database/tttest00/: design_dict.toml  objective_dict.toml  pred_my_optimization.csv  project_info.toml
raw_data/: Electrocarb mesitylV2_10.csv  Electrocarb mesitylV2_11.csv
