[project]
name = "EDBOplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"  # Strict Python 3.9 for compatibility
dependencies = [
    # Keep original pinned versions for maximum reproducibility
    "botorch==0.5.0",
    "gpytorch==1.5.1",
    "torch==1.10.0",
    "numpy==1.21.5",
    "scipy==1.7.2",
    "pandas==1.3.4",
    "scikit-learn==1.0.1",
    "idaes-pse==1.5.1",
    "ipykernel==6.5.1",
    "ipython==7.29.0",
    "ipywidgets==7.6.5",
    "Jinja2==3.0.3",
    "joypy==0.2.6",
    "lxml==4.6.4",
    "mordred==1.2.0",
    "ordered-set==4.0.2",
    "pareto==1.1.1.post3",
    "pymoo==0.5.0",
    "sympy==1.9",
    
    # Flexible versions for packages that should work
    "seaborn>=0.11.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.60.0",
    "marimo>=0.13.15",
    "toml>=0.10.0",
    "sacred>=0.8.0",
    "sacredboard>=0.2.0",
    "pymongo>=3.12.0",
    "pyarrow",
]
